Ajout liens vers doc et readme plus modif du style front

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="header">
+        {# image définie par le CSS #}
+    </div>
     <div class="container">
         <h1>Bienvenue chez Carambar & Co</h1>
         <button id="boutonBlague">Obtenir une blague</button>
         <div id="affichageBlague"></div>
+    </div>
+    <div class="footer">
+        <a href="https://github.com/Paramessou/blagues-carambar/commit/1e20f7d1cf084b4b808d02ce23553af407c22065" target="_blank">README</a>
+        <a href="https://blagues-carambar.onrender.com/api-docs/" target="_blank">Doc</a>
     </div>
     <script src="script.js"></script>
 </body>
