--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
     </div>
     <div class="container">
         <h1>Bienvenue chez Carambar & Co</h1>
-        <button id="boutonBlague">Obtenir une blague</button>
+        <button id="boutonBlague">Obtenir une blague aléatoire</button>
         <div id="affichageBlague"></div>
+
+        <h2>Ajouter une nouvelle blague</h2>
+        <form id="formAjoutBlague">
+            <input type="text" id="contenu" placeholder="Contenu de la blague" required>
+            <input type="text" id="chute" placeholder="Chute de la blague" required>
+            <button type="submit">Ajouter la blague</button>
+        </form>
+        <div id="messageAjout"></div>
+
+        <h2>Afficher toutes les blagues</h2>
+        <button id="boutonAfficherToutes">Afficher toutes les blagues</button>
+        <div id="affichageToutesBlagues"></div>
+
     </div>
     <div class="footer">
         <a href="https://github.com/Paramessou/blagues-carambar/commit/1e20f7d1cf084b4b808d02ce23553af407c22065" target="_blank">README</a>
