ajout d'un bouton pour cacher toutes les blagues une fois affichées.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         <h2>Afficher toutes les blagues</h2>
         <button id="boutonAfficherToutes">Afficher toutes les blagues</button>
+        <button id="boutonCacherToutes" style="display: none;">Cacher toutes les blagues</button>
         <div id="affichageToutesBlagues"></div>
 
     </div>
